# pulse-visualizer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CONFIGURATION.md  CONTRIBUTORS  CONTRIBUTORS.md  LICENSE  PackageLinux.cmake  PackageWindows.cmake  README.md  config.json.template  config.yml.template  config.yml.template.windows  flake.nix  install.sh  pulse-visualizer.1.in  pulse-visualizer.desktop.in  pulse-visualizer.nix  shell.nix  uninstall.sh  vcpkg-configuration.json  vcpkg.json  version.rc.in
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-cmake.yml
cmake/: PackageLinux.cmake  PackageWindows.cmake  PkgConfigWindows.cmake
docs/: CONFIGURATION.md  CONTRIBUTORS.md  PLUGINS.md
nix/: pulse-visualizer.nix  shell.nix
pkg/: install.sh
resources/: resources.rc
shaders/: fade.frag  fade.vert  fade_only.frag  glow.frag  phosphor_blur.comp  phosphor_colormap.comp  phosphor_combine.comp  phosphor_compute.comp  phosphor_decay.comp
src/: audio_data.hpp  audio_engine.cpp  audio_engine.hpp  audio_processing.cpp  audio_processing.hpp  config.cpp  config.hpp  config.hpp.template  config.json.template  config_window.cpp  dsp.cpp  fft_visualizer.cpp  graphics.cpp  graphics.hpp  headless.cpp  lissajous.cpp  lissajous_visualizer.cpp  lufs.cpp  main.cpp  oscilloscope.cpp  oscilloscope_visualizer.cpp  plugin.cpp  sdl_window.cpp  spectrogram.cpp  spectrogram_visualizer.cpp  spectrum_analyzer.cpp  spline.cpp  splitter.cpp  splitter.hpp  theme.cpp  theme.hpp  update_window.cpp  visualizer_registry.cpp  visualizers.cpp  visualizers.hpp  vu.cpp  waveform.cpp  window_manager.cpp  window_manager.hpp
src/include/: audio_engine.hpp  common.hpp  config.hpp  config_schema.hpp  config_window.hpp  dsp.hpp  graphics.hpp  headless.hpp  plugin.hpp  plugin_api.hpp  sdl_window.hpp  spline.hpp  theme.hpp  types.hpp  update_window.hpp  visualizer_registry.hpp  visualizers.hpp  window_manager.hpp
themes/: _TEMPLATE.txt  mocha.txt
